# OB1

./: README.md
.claude/skills/ob1/: SKILL.md
local/: .env.example  .gitignore  README.md  docker-compose.yml
local/cli/: README.md  pyproject.toml
local/cli/src/ob1/: cli.py  config.py  db.py  embed.py  metadata.py
local/db/init/: 02-schema.sql  03-functions.sql
recipes/obsidian-vault-import/: README.md  import-obsidian.py
server/: index.ts
